<resources>
    <string name="app_name">JustMovein</string>
    <string name="placeholder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </string>
    <string name="welcome_text">We are aiming to streamline the user experience in the realms of both rental and second-hand transactions. </string>
    <string name="add_up_to_5">Add up to 5 photos</string>
    <string name="description_title">Description</string>
    <string name="detail_title">Details</string>
    <string name="price_title">Pricing</string>
    <string name="item_title_hint">Title</string>
    <string name="item_description_hint">Description</string>

    <string-array name="category_array">
        <item>Select category...</item>
        <item>Books</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Home</item>
        <item>Outdoor</item>
        <item>Toys &amp; Collectibles</item>
        <item>Other</item>

    </string-array>

    <string-array name="condition_array">
        <item>Select condition...</item>
        <item>New</item>
        <item>Like New</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>

    <string-array name="category_array_house">
        <item>Select category...</item>
        <item>Studio</item>
        <item>1 Bed</item>
        <item>2 Beds</item>
        <item>Other</item>

    </string-array>


    <string name="title_activity_profile">ProfileActivity</string>
    <string name="back" />
    <string name="title_activity_profile_edit">ProfileEditActivity</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="description">Description: %1$s</string>
    <string name="condition">Condition: %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="failed_to_load_item_details">Failed to load item details.</string>
    <string name="please_wait_for_the_image_to_finish_uploading">Please wait for the image to finish uploading</string>
    <string name="invalid_price">Invalid price</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="title_is_required">Title is required</string>
    <string name="description_is_required">Description is required</string>
    <string name="failed_to_upload_image">Failed to upload image.</string>
    <string name="item_listed_successfully">Item listed successfully!</string>
    <string name="failed_to_list_item">Failed to list item.</string>
    <string name="no_result">Oops, no matching result.</string>
    <string name="email_and_password_must_not_be_empty">Email and password must not be empty</string>
    <string name="user_is_not_exist">User is not exist</string>
    <string name="select_a_language">Select a Language</string>
    <string name="logout">Logout</string>
    <string name="no_name">No Name</string>
    <string name="no_email">No Email</string>
    <string name="this_is_end_user_license_agreement">\n\n\n\n\n\n\n\n\nThis is End-user license agreement</string>
    <string name="email_and_password_must_not_be_empty_1">Email and password must not be empty</string>
    <string name="sign_up_failed">Sign-up failed: %1$s</string>
    <string name="browse">Browse</string>
    <string name="liked">Liked</string>
    <string name="database_error">Database error: %1$s</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="new_listing">New listing</string>
    <string name="list">List</string>
    <string name="log_in">Log in</string>
    <string name="log_in_1">Log in</string>
    <string name="new_user_sign_up">New User? Sign Up.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="private_account">Private Account</string>
    <string name="security_amp_privacy"><![CDATA[Security & privacy]]></string>
    <string name="language">Language</string>
    <string name="send_us_message">Send us message</string>
    <string name="logout_0">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="name_0">Name</string>
    <string name="email">Email</string>
    <string name="zipcode">ZIP Code:</string>
    <string name="password">Password</string>
    <string name="sign_up_0">Sign Up</string>
    <string name="already_signed_up_log_in">Already signed up? Log in.</string>
    <string name="welcome_to_justmovein">Welcome to JustMoveIn!</string>
    <string name="log_in_0">Log in</string>
    <string name="sign_up_1">Sign up</string>
    <string name="search">Search...</string>
    <string name="housing">Housing</string>
    <string name="trading">Trading</string>
    <string name="profile">Profile</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="your_listings">Your Listings</string>
    <string name="contact_seller">Contact seller</string>
    <string name="category_prompt">Select category</string>
</resources>