<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backgroundview"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="63dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_left" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/icon_account_circle"
                android:id="@+id/profile_pic"/>
            <ProgressBar
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:id="@+id/progress_bar"/>
            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text=" "
                style="@style/textview"
                android:textSize="22sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" "
                style="@style/textview"
                android:id="@+id/profile_email"
                android:textSize="12sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/u_btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:paddingStart="30dp"
                android:layout_gravity="center"
                android:background="@color/button"
                android:text="@string/edit_profile"
                android:textColor="@color/text"
                android:textAllCaps="false"
                android:paddingEnd="30dp"/>
            <LinearLayout
                android:background="@drawable/edt_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:padding="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/nightmodeIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_nightmode"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/night_mode"
                        style="@style/textview"
                        android:layout_toEndOf="@+id/nightmodeIcon"
                        />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/u_switch_night_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/u_notification_config"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/notificationIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_notification"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/notifications"
                        style="@style/textview"
                        android:layout_toEndOf="@+id/notificationIcon"
                        />
                    <ImageButton
                        android:background="#00000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/u_delete_my_account"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/private_account_icon"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_private"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/delete_my_account"
                        style="@style/textview"
                        android:layout_toEndOf="@+id/private_account_icon"
                        />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/edt_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:padding="15dp">
                <RelativeLayout
                    android:id="@+id/u_item_security_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/securityicon"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_security"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/security_amp_privacy"
                        style="@style/textview"
                        android:layout_toEndOf="@+id/securityicon"
                        />
                    <ImageButton
                        android:background="#00000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/u_language_setting"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/languageicon"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_language"
                        android:padding="12dp"/>
                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/language"
                        style="@style/textview"
                        android:layout_toEndOf="@+id/languageicon"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_right"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/edt_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/u_send_us_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/messageicon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:src="@drawable/ic_message" />

                    <TextView
                        style="@style/textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@+id/messageicon"
                        android:text="@string/send_us_message" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_right" />
                </RelativeLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textSize="14sp"
                tools:text="@string/logout_0"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/text"
                android:background="@color/button"
                android:id="@+id/profile_btn"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>