<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/cross"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/cross_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_listing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="New listing"
            android:textColor="@color/text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/cross"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_image_1"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:elevation="4dp"
            app:layout_constraintStart_toEndOf="@id/rectangle_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_up_to_5"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:elevation="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/add_up_to_5"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rectangle_1"
            app:layout_constraintStart_toStartOf="@id/rectangle_1"
            app:layout_constraintTop_toTopOf="@id/rectangle_1" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="200dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/description_title"
            android:textColor="@color/text"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/new_listing_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/input"
            android:hint="@string/item_title_hint"
            android:paddingLeft="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/new_listing_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/input"
            android:hint="@string/item_description_hint"
            android:paddingLeft="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_title" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/detail_title"
            android:textColor="@color/text"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_description" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/input"
            android:entries="@array/category_array"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title" />

        <Spinner
            android:id="@+id/spinnerCondition"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:background="@color/input"
            android:entries="@array/condition_array"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:text="@string/price_title"
            android:textColor="@color/text"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerCondition" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/input"
            android:hint="$ 0.00"
            android:inputType="numberDecimal"
            android:paddingLeft="13dp"
            android:textColor="@color/text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_title" />

        <Button
            android:id="@+id/btnList"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/button"
            android:text="List"
            android:textColor="@color/text"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPrice" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="56dp"
            android:layout_marginTop="88dp"
            android:elevation="4dp"
            android:src="@drawable/baseline_add_a_photo_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
